fix: change body and header width to 100% - fix hiding under scrollbar

--- a/styles/scss/_base.scss
+++ b/styles/scss/_base.scss
@@ -5,5 +5,5 @@ body {
   background-color: $background-color;
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
 }
